# react-rust-web-template

./: .gitignore  Cargo.toml  README.md
src/: assets.rs  main.rs
web/: index.html  package.json  vite.config.mts
web/src/: App.tsx  index.tsx
web/src/assets/: main.scss
