[package]
name = "react-rust-web-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-web = "4.5.1"
mime_guess = "2.0.4"
rust-embed = { version = "8.3.0", features = ["actix"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
